added user list, fix update password
